Change h2 Fizz Buzz to h1
This is the main header of the page rather than a
sub-header

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css" />
         <title>Fizz buzz Site</title>
     </head>
     <body>
-        <h2>Fizz Buzz</h2>
+        <h1>Fizz Buzz</h1>
         <div class="left-content">
             <p>
-                <span>F</span>izz buzz is a group word game for children to teach them about
-                division. Players take turns to count incrementally, replacing
-                any number divisible by three with the word "fizz", and any
-                number divisible by five with the word "buzz", and any number
-                divisible by both three and five with the word "fizzbuzz". -<a
+                <span>F</span>izz buzz is a group word game for children to
+                teach them about division. Players take turns to count
+                incrementally, replacing any number divisible by three with the
+                word "fizz", and any number divisible by five with the word
+                "buzz", and any number divisible by both three and five with the
+                word "fizzbuzz". -<a
                     href="https://en.wikipedia.org/wiki/Fizz_buzz"
                     >Wikipedia</a
                 >
