--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         >Wikipedia</a
                     >
                 </p>
-                <form action="" onsubmit="return getFizzBuzzResults()">
+                <form>
                     <label for="fizzbuzz-number">Enter a number:</label>
                     <input
                         type="number"
@@ -31,7 +31,7 @@
                         step="1"
                         required
                     />
-                    <button id="submit-btn">Let's Fizz buzz!</button>
+                    <button type="button" id="submit-btn">Let's Fizz buzz!</button>
                 </form>
             </div>
             <div class="right-area">
