Update form input & add class to results p tag
1. Update form input
- Add oninput attribute to prevent the input of
either negative numbers or non-number values
- Floating point numbers will also be prevented by
removing the decimal place upon input
For example: 1.2 becomes 12

2. Add class to results p tag
- Since a p tag is being used to represent the
fizz buzz results, a placeholder attribute is not
available. To get around this, initial text is
added, and a before-results class is added and
styled accordingly. Javascript will be added to
change the class and update the styling
accordingly.

--- a/index.html
+++ b/index.html
@@ -23,19 +23,31 @@
                     >
                 </p>
                 <form>
-                    <label for="fizzbuzz-number">Enter a number:</label>
-                    <input
-                        type="number"
-                        id="fizzbuzz-number"
-                        min="0"
-                        step="1"
-                        required
-                    />
-                    <button type="button" id="submit-btn">Let's Fizz buzz!</button>
+                    <label for="fizzbuzz-number">Enter an integer number:</label>
+                    <div class="form-wrapper">
+                        <input
+                            type="number"
+                            id="fizzbuzz-number"
+                            min="0"
+                            step="1"
+                            oninput="validity.valid||(value=value.replace(/\D+/g, ''))"
+                            required
+                        />
+                        <!-- oninput for preventing input of negative values -->
+                        <button type="button" id="submit-btn">
+                            Let's Fizz buzz!
+                        </button>
+                    </div>
                 </form>
             </div>
             <div class="right-area">
-                <p name="fizzbuzz-results" id="fizzbuzz-results"></p>
+                <p
+                    name="fizzbuzz-results"
+                    id="fizzbuzz-results"
+                    class="before-results"
+                >
+                    Results will appear here.
+                </p>
             </div>
         </main>
     </body>
